<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	 
	  <modelVersion>4.0.0</modelVersion>
	  <groupId>bdd.payme.digital.tests</groupId>
	  <artifactId>bdd_framework</artifactId>
	  <version>0.0.1-SNAPSHOT</version>
	  <packaging>jar</packaging>
	  <name>CSOPortal</name>
	  
  <!-- <url>http://maven.apache.org</url> -->

	  <properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <spring.version>5.2.7.RELEASE</spring.version>
	    <cucumber.version>1.2.5</cucumber.version>
        <java.version>1.8</java.version>
        <junit.version>4.12</junit.version>
        <maven.compiler.version>3.3</maven.compiler.version>
        <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
        <checkstyle.version>6.19</checkstyle.version>
	  </properties>
	  
	 <dependencies>
	 		<!-- <dependency>
	            <groupId>org.apache.logging.log4j</groupId>
	            <artifactId>log4j-api</artifactId>
	            <version>2.10.0</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.logging.log4j</groupId>
	            <artifactId>log4j-core</artifactId>
	            <version>2.10.0</version>
           </dependency> -->
           <dependency>
	            <groupId>org.springframework</groupId>
	            <artifactId>spring-core</artifactId>
	            <version>${spring.version}</version>
	       </dependency>
	       <dependency>
	            <groupId>org.springframework</groupId>
	            <artifactId>spring-beans</artifactId>
	            <version>${spring.version}</version>
          </dependency>
          <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
          </dependency>
          <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-mail</artifactId>
            <version>5.0.3.RELEASE</version>
          </dependency>
          <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${spring.version}</version>
          </dependency>
          <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
          </dependency>
          <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
          </dependency>
          <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-spring</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
		<dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>3.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.3</version>
        </dependency>

        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4.7</version>
        </dependency>
		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			    <groupId>org.seleniumhq.selenium</groupId>
			    <artifactId>selenium-java</artifactId>
			    <version>3.13.0</version>
		</dependency>
			<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-server</artifactId>
		    <version>3.13.0</version>
		</dependency>
			       
	   <!-- https://mvnrepository.com/artifact/info.cukes/gherkin -->
		<dependency>
		    <groupId>info.cukes</groupId>
		    <artifactId>gherkin</artifactId>
		    <version>2.12.2</version>
		    <scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/de.openkeyword/autoit -->
		<dependency>
		   <groupId>de.openkeyword</groupId>
		   <artifactId>autoit</artifactId>
		   <version>0.0.15</version>
		</dependency>

         <!-- https://mvnrepository.com/artifact/net.sf.jacob-project/jacob -->
         <dependency>
             <groupId>net.sf.jacob-project</groupId>
             <artifactId>jacob</artifactId>
             <version>1.14.3</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>3.17</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.17</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml-schemas</artifactId>
             <version>3.17</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.masterthought</groupId>
             <artifactId>cucumber-reporting</artifactId>
             <version>4.6.0</version>
         </dependency>
         <dependency>
             <groupId>de.openkeyword</groupId>
             <artifactId>autoit</artifactId>
             <version>0.0.15</version>
         </dependency>
         <!-- Thanks for using https://jar-download.com -->


     </dependencies>
	  
	<build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <!--<parallel>classes</parallel>-->
                    <!--<forkMode>perthread</forkMode>-->
                    <!--<threadCount>2</threadCount>-->
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <includes>
                        <include>**/*UAT1_TestRunner.java</include>
                    </includes>
                    <testFailureIgnore>true</testFailureIgnore>
                    <workingDirectory>${basedir}</workingDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgument>-Werror</compilerArgument>
                </configuration>
            </plugin>
           
            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>${project.name}</projectName>
                            <outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>
                            <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>

                        </configuration>
                    </execution>
                </executions>

            </plugin>

        </plugins>

    </build>
 
</project>
